2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py: rename ly2dvi.py to lilypond.py

	* lily/GNUmakefile (SUBDIRS): rename binary to lilypond-bin

2003-08-29  Heikki Junes  <hjunes@cc.hut.fi>

	* ChangeLog lilypond.words Documentation/topdocs/NEWS.texi
	Documentation/user/refman.itely input/regression/allfontstyle.ly
	input/regression/grace-types.ly:
	fix spelling for acciaccatura (Webster's 1913).

2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/main.cc (usage): adjust blurb, include url.

	* input/regression/breathing-sign.ly (texidoc): transpose up

2003-08-28  Juergen Reuter  <reuter@ipd.uka.de>

	* input/regression/breathing-sign.ly: changed ancient examples to
	be relevant (by request of Han-Wen); updated BreathingSign text
	property according to new syntax

	* ly/gregorian-init.ly: updated BreathingSign text property
	according to new syntax

2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Clef): give example of G_8 clef.
	(Clef): index entries for clefs.

	* python/lilylib.py (system): remove errorlog files.
	
2003-08-28  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond.words: add \new and new graces. Add dynamics to menus
	keeping 1.8.x compatibility; after all the engraving relating to 
	notes becomes postfixed `-' marks will be removed.

2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/molecule.cc (align_to): idem.

	* lily/molecule-scheme.cc: ly_align_to_x takes continuous dir argument.
	

	* ly/grace-init.ly (stopAcciaccaturaMusic): correct misspelling of
	accacciatura everywhere.

	* VERSION (PACKAGE_NAME): released 1.9.2

	* GNUmakefile.in (EXTRA_DIST_FILES): dist lilypond.vim too.

	* scm/document-markup.scm (markup-doc-node): sort markup function
	list.

	* lily/paper-outputter.cc (output_version): change "Lily was here"
	into  "Engraved by LilyPond"

	* lily/my-lily-lexer.cc (My_lily_lexer): don't crash
	on unquoted strings before \notenames.
