@@ -14,7 +14,7 @@ Distributions will want to install lilypond.info doing:
 @direntry
 @c    ;; prepend GNU for dir, must be unique
 * GNU LilyPond: (lilypond).                    The GNU music typesetter.
-* ly2dvi: (lilypond)Invoking ly2dvi::          Titling LilyPond scores.
+* lilypond: (lilypond)Invoking lilypond::      Titling LilyPond scores.
 * Glossary: (music-glossary).                  Glossary of music terms.
 * convert-ly: (lilypond)Invoking convert-ly::  Older LilyPond versions.
 * midi2ly: (lilypond)Invoking midi2ly::        Importing MIDI.
